# pyMVGC

./: README.md  pyproject.toml
notebooks/: tutorial.ipynb
pyMVGC/: __init__.py  autocov_to_MVGC.py  autocov_to_pMVGC.py  autocov_to_var.py  estimate_model_order.py  helpers.py  ts_to_MVGC.py  ts_to_pMVGC.py  ts_to_var.py  var_to_autocov.py
