[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMVGC"
version = "1.0.0"
description = "Multivariate Granger causality for time-series data in python"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["granger-causality", "time-series", "statistics", "mvgc", "causal"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
]



[project.urls]
Homepage = "https://github.com/jacobhegarty/pyMVGC"
Source = "https://github.com/jacobhegarty/pyMVGC"
Tutorial = "https://github.com/jacobhegarty/pyMVGC/blob/main/notebooks/tutorial.ipynb"
Issues = "https://github.com/jacobhegarty/pyMVGC/issues"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyMVGC*"]
